// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CriterionDate should render the component when date is set 1`] = `
<div
  class="tlp-form-element document-search-criterion"
>
  <label
    class="tlp-label"
    for="document-criterion-date-create_date"
  >
    Creation date
  </label>
  <div
    class="tlp-form-element tlp-form-element-prepend"
  >
    <select
      class="tlp-prepend"
    >
      <option
        value=">"
      >
        After
      </option>
      <option
        value=<
      >
        Before
      </option>
      <option
        data-test="equal"
        value="="
      >
        On
      </option>
    </select>
    <date-flat-picker-stub
      data-test="document-criterion-date-create_date"
      id="document-criterion-date-create_date"
      required="false"
      value="2022-01-01"
    />
  </div>
</div>
`;

exports[`CriterionDate should render the component when no date set 1`] = `
<div
  class="tlp-form-element document-search-criterion"
>
  <label
    class="tlp-label"
    for="document-criterion-date-create_date"
  >
    Creation date
  </label>
  <div
    class="tlp-form-element tlp-form-element-prepend"
  >
    <select
      class="tlp-prepend"
    >
      <option
        value=">"
      >
        After
      </option>
      <option
        value=<
      >
        Before
      </option>
      <option
        data-test="equal"
        value="="
      >
        On
      </option>
    </select>
    <date-flat-picker-stub
      data-test="document-criterion-date-create_date"
      id="document-criterion-date-create_date"
      required="false"
      value=""
    />
  </div>
</div>
`;
